[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Corner_001.png" type="Texture" id=1]
[ext_resource path="res://Scripts/OutlineBlock.gd" type="Script" id=2]

[node name="OutlineBlock" type="Node2D"]
script = ExtResource( 2 )

[node name="top_left" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 20, 20, 20 )

[node name="top_right" type="Sprite" parent="."]
position = Vector2( 20, 0 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 20, 20, 20 )

[node name="bottom_left" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 20, 20, 20 )

[node name="bottom_right" type="Sprite" parent="."]
position = Vector2( 20, 20 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 20, 20, 20 )
